[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mediarelay"
version = "1.0.21"
description = "A video streaming server that allows you to securely share your personal video library over the internet"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE.md"}
authors = [
    {name = "tboy1337"}
]
keywords = [
    "video",
    "streaming",
    "server",
    "media",
    "flask",
    "security",
    "authentication"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Typing :: Typed"
]

dependencies = [
    "Flask",
    "Werkzeug",
    "waitress",
    "flask-limiter",
    "python-dotenv",
    "click",
    "colorlog",
    "psutil"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-timeout",
    "pytest-xdist",
    "pytest-cov",
    "pytest-html",
    "pytest-json-report",
    "pytest-mock",
    "pylint",
    "mypy",
    "black",
    "isort",
    "bandit",
    "types-psutil",
    "types-waitress",
    "types-Flask",
    "types-click",
    "types-Werkzeug",
    "autopep8",
    "pip-audit"
]

[project.scripts]
mediarelay = "mediarelay.server:main"
mediarelay-config = "mediarelay.config:main"
mediarelay-genpass = "mediarelay.generate_password:cli"
mediarelay-validate = "mediarelay.config:validate_main"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/tboy1337/MediaRelay"
Documentation = "https://github.com/tboy1337/MediaRelay/tree/main/docs"
Repository = "https://github.com/tboy1337/MediaRelay"
Issues = "https://github.com/tboy1337/MediaRelay/issues"

# Black configuration
[tool.black]
line-length = 88
target-version = ['py312', 'py313', 'py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
src_paths = ["src", "tests"]
known_first_party = ["mediarelay"]

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv", "build", "dist"]
skips = ["B104"]
